--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 13 17:50:43 KST 2023
-sdk.dir=C\:\\Users\\ojy10\\AppData\\Local\\Android\\Sdk
+#Fri Jul 14 14:43:45 KST 2023
+sdk.dir=/Users/seohangyeol/Library/Android/sdk
