feat: CyberCampus 강좌 크롤링
body: 강좌이름, id, link 크롤링
CyberCampusDto class 생성
CyberCampusEntity class 생성 - extends CyberCampusDto
- nested class: Assignment, MOOC, Quiz, Announcement class

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     // crawling & parsing
     implementation 'org.jsoup:jsoup:1.16.1'
     implementation 'org.seleniumhq.selenium:selenium-java:4.10.0'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.4.0'
 
     // JSON
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
