feat: CyberCampus 크롤링 완료
body: Gson 라이브러리 추가
과제, MOOC, 퀴즈, 공지 정보를 모두 JSON객체로 전달

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     // JSON
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 tasks.named('test') {
